
[package]
name = "Petrichor"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "Cross platform lua interpreting game engine"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
panic ="abort"

[features]
default=["headed"] # "online_capable"
include_auto=[]
online_capable=["tokio","tokio-util"]
headed=["wgpu","winit","winit_input_helper"]
audio=["cpal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#wgpu = { version = "0.12", features = ["webgl"],optional=true }
wgpu = { version = "0.15.0", optional=true }
cpal={ version ="0.14.1", optional=true }
bytemuck= { version = "1.12.2", features = ["derive"] }

winit = { version ="0.27.5", optional=true }
winit_input_helper={ version ="0.13.0", optional=true }
pollster = "0.2.5"
log="0.4.17"
env_logger = "0.10.0"
lazy_static="1.4.0"
parking_lot ="0.12.1"
anyhow="1.0.66"
image ="0.24.4"
imageproc="0.23.0"
# once_cell="1.9.0"
gltf="1.0.0"
itertools="0.10.5"
serde="1.0.147"
mlua={version= "0.8.6", features=["luau"]}
rand="0.8.5"
glam="0.22.0"

# uuid = {version="0.8.2",features = ["serde", "v4"]}
zip="0.6.3"
spin_sleep = "1.1.1"
clipboard = "0.5.0"
rustc-hash = "1.1.0"
ron="0.8.0"
gilrs ="0.10.1"
serde_json ="1.0.87"
tokio = { version = "1.21.2", features = ["full"], optional=true }
tokio-util= { version = "0.7.4", features = ["codec"],optional=true } 
dirs="4.0.0"

futures="0.3.25"
# wasm-bindgen = "0.2.83"

# [dependencies.tracy]
# package = "tracy_full"
# version = "1.1.2"
# default-features = false
# features = ["enable","system-tracing", "context-switch-tracing", "sampling", "code-transfer", "broadcast","wgpu"]

# [package.metadata.bundle]
# name = "PotionCommotion"
# identifier = "com.makeavoy.potioncommotion"
# icon = ["witch-icon32x32.png", "witch-icon128x128.png"]
# version = "0.1.1"
# resources = []
# copyright = "Copyright (c) Nick \"MakeAvoy\" McAvoy 2022. All rights reserved."
# category = "Game"
# short_description = "Make witch potions."
# deb_depends = []
# sx_frameworks = []

# [package.metadata.bundle]
# name = "SoundMaker"
# identifier = "com.makeavoy.soundmaker"
# icon = ["jumper_icon.png"]
# version = "0.1"
# resources = []
# copyright = "Copyright (c) Nick \"MakeAvoy\" McAvoy 2022. All rights reserved."
# category = "Game"
# short_description = "Sound editor"
# deb_depends = []
# osx_frameworks = []

[package.metadata.bundle]
name = "Petrichor64"
identifier = "com.makeavoy.petrichor64"
icon = ["petrichor-icon.png"]
version = "0.2.2"
resources = []
copyright = "Copyright (c) Nick \"MakeAvoy\" McAvoy 2023. All rights reserved."
category = "Game"
short_description = "Fantasy game console and engine"
deb_depends = []
osx_frameworks = []