
[package]
name = "Petrichor64"
version = "0.4.3"
edition = "2021"
resolver = "2"
description = "Cross platform lua interpreting game engine"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
panic ="abort"

[profile.release-nightly]
inherits = "release"

[features]
default=["online_capable", "silt"] # "online_capable" ,  "headed"
include_auto=["studio"]
online_capable=["tokio", "tokio-util", "rmp-serde", "bytes"]
headed=["wgpu", "winit", "winit_input_helper"]
audio=["cpal"]
puc_lua=["mlua"]
silt=["silt-lua"]
picc=["piccolo"]
studio=[]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#wgpu = { version = "0.12", features = ["webgl"],optional=true }
wgpu = { version = "24.0.1", optional=true }
cpal={ version ="0.15.3", optional=true }
bytemuck= { version = "1.21.0", features = ["derive"] }
bytes={version="1.10.0", optional=true}

winit = { version ="0.30.9", features=["rwh_05"], optional=true }
winit_input_helper={ version ="0.16.0", optional=true }
pollster = "0.4.0"
log="0.4.26"
env_logger = "0.11.6"
lazy_static="1.5.0"
parking_lot ="0.12.3"
anyhow="1.0.96"
image ="0.25.5"
imageproc="0.25.0"
gltf="1.4.1"
itertools="0.14.0"
serde={version="1.0.218",features=["derive"]}

mlua={version= "0.10.3", optional=true, features=["luau"]}
rand="0.9.0"
glam="0.30.0"
rmp-serde={version="1.3.0",optional=true}

# uuid = {version="0.8.2",features = ["serde", "v4"]}
zip="2.2.2"
spin_sleep = "1.3.0"
clipboard = "0.5.0"
rustc-hash = "2.1.1"
ron="0.8.1"
gilrs ="0.10.10"
serde_json ="1.0.139"
tokio = { version = "1.43.0", features = ["full"], optional=true }
tokio-util= { version = "0.7.13", features = ["codec"],optional=true } 
dirs="6.0.0"
futures="0.3.31"
regex="1.11.1"
native-dialog = "0.7.0"
silt-lua = {version="0.1.1", optional=true, path="../silt-lua"}
piccolo = { git="https://github.com/kyren/piccolo", optional=true } # version="0.2.0",
gc-arena = {git="https://github.com/kyren/gc-arena"}
crossbeam = "0.8.4"
atomicell = "0.2.0"
# wasm-bindgen = "0.2.83"

# [dependencies.tracy]
# package = "tracy_full"
# version = "1.1.2"
# default-features = false
# features = ["enable","system-tracing", "context-switch-tracing", "sampling", "code-transfer", "broadcast","wgpu"]

# [package.metadata.bundle]
# name = "PotionCommotion"
# identifier = "com.makeavoy.potioncommotion"
# icon = ["witch-icon32x32.png", "witch-icon128x128.png"]
# version = "0.1.1"
# resources = []
# copyright = "Copyright (c) Nick \"MakeAvoy\" McAvoy 2022. All rights reserved."
# category = "Game"
# short_description = "Make witch potions."
# deb_depends = []
# sx_frameworks = []

# [package.metadata.bundle]
# name = "SoundMaker"
# identifier = "com.makeavoy.soundmaker"
# icon = ["jumper_icon.png"]
# version = "0.1"
# resources = []
# copyright = "Copyright (c) Nick \"MakeAvoy\" McAvoy 2022. All rights reserved."
# category = "Game"
# short_description = "Sound editor"
# deb_depends = []
# osx_frameworks = []

[package.metadata.bundle]
name = "Petrichor64"
identifier = "com.makeavoy.petrichor64"
icon = ["petrichor-icon.png"]
version = "0.4.0"
resources = []
copyright = "Copyright (c) Nick \"MakeAvoy\" McAvoy 2023. All rights reserved."
category = "Game"
short_description = "A fantasy game console and game engine"
deb_depends = []
osx_frameworks = []
